# mathd

./: .gitignore  CMakeLists.txt  README.md  autobuild  autobuild.cpp  setup.sh  toolchain-win64.cmake
build-win64/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: smctl_cache_cleaner.hpp  smctl_calculator.hpp
include/archived/: smctl_calc.hpp
mathd_gui/: CMakeLists.txt  main.cpp
src/: main.cpp
